# SpaceNix

./: .gitignore
scripts/: .env.example  fix-b2-cors.sh  upload-s3-env.sh  upload-scaleway-email-env.sh
sync/: AGENTS.md  README.md  publish.sh  spacetime.local.json
sync/spacetimedb/: Cargo.toml
sync/spacetimedb/src/: api_key.rs  config.rs  device.rs  device_metric.rs  email.rs  file.rs  lib.rs  secret.rs  ssh.rs  ui_event.rs  user.rs
tui/: Cargo.toml
tui/module_bindings/: Cargo.toml
tui/module_bindings/src/: ack_ui_command_reducer.rs  api_key_has_permission_procedure.rs  api_key_metadata_type.rs  api_key_type.rs  attach_ssh_relay_session_token_reducer.rs  clear_ssh_relay_device_reducer.rs  close_ssh_relay_session_reducer.rs  create_api_key_procedure.rs  create_folder_reducer.rs  created_api_key_type.rs  delete_device_reducer.rs  delete_file_reducer.rs  delete_secret_reducer.rs  delete_ssh_endpoint_reducer.rs  delete_ssh_key_reducer.rs  device_metadata_type.rs  device_metric_sample_type.rs  device_metric_type.rs  device_metrics_report_type.rs  device_type.rs  file_metadata_type.rs  finalize_upload_reducer.rs  get_file_procedure.rs  get_secret_procedure.rs  lib.rs  my_api_keys_table.rs  my_device_metrics_table.rs  my_devices_table.rs  my_files_table.rs  my_secrets_table.rs  my_ssh_endpoints_table.rs  my_ssh_keys_table.rs  my_ssh_relay_device_table.rs  my_ssh_relay_sessions_table.rs  my_ui_commands_table.rs  my_user_table.rs  open_ssh_relay_session_reducer.rs  password_credential_type.rs  prune_device_metrics_reducer.rs  register_device_reducer.rs  (+68 more)
tui/scripts/: gen-bindings.sh
tui/src/: bindings.rs  config.rs  http.rs  main.rs  metrics.rs  relay.rs  service.rs  util.rs
tui/src/auth/: conn.rs  device.rs  login.rs  mod.rs  pat.rs
tui/src/cli/: account.rs  device.rs  file.rs  mod.rs  secret.rs  ssh.rs  sync.rs  token.rs
tui/src/cmd/: login.rs  logout.rs  mod.rs  whoami.rs
tui/src/store/: credentials.rs  device.rs  mod.rs  service_lock.rs  sync.rs
tui/src/tui/: app.rs  mod.rs
web/: .env  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/components/: app-shell.tsx  common.tsx  file-row.tsx  file-tree-utils.ts  file-tree.tsx  folder-picker.tsx  metrics-data.ts  metrics-history.tsx  permission-editor.tsx  secret-permission-gate.tsx  sparkline.tsx  tag-input.tsx
web/src/lib/: auth-context.ts  auth.tsx  file-crypto.ts  stdb.ts  toast.ts  use-now.ts  use-theme.ts  utils.ts
web/src/module_bindings/: ack_ui_command_reducer.ts  api_key_has_permission_procedure.ts  attach_ssh_relay_session_token_reducer.ts  create_api_key_procedure.ts  create_folder_reducer.ts  delete_device_reducer.ts  device_table.ts  finalize_upload_reducer.ts  get_file_procedure.ts  get_secret_procedure.ts  index.ts  my_api_keys_table.ts  my_configs_table.ts  my_device_metrics_table.ts  my_devices_table.ts  my_files_table.ts  my_secrets_table.ts  my_user_table.ts  (+58 more)
(+29 files in other folders)
