[workspace]
resolver = "2"
members = [".", "module_bindings"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
spacetimedb-sdk = "2.6"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
axum = { version = "0.7", features = ["http1", "tokio"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = "0.23"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
open = "5"
futures = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
humantime = "2"
once_cell = "1"
toml = "0.8"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }
libc = "0.2"

[package]
name = "spacenix"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "spacenix"
path = "src/main.rs"

[dependencies]
spacetimedb-sdk = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
open = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
humantime = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
libc = { workspace = true }
module_bindings = { path = "module_bindings" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
