[package]
name = "spacenix"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.4.1", features = ["unstable"] }
log = "0.4"
blake3 = "1"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
aws-sdk-s3 = { version = "1.136", default-features = false, features = ["behavior-version-latest"] }
aws-types = "1"
aws-credential-types = "1"
futures-lite = "2"
